--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,8 +13,67 @@ body {
 }
 
 #search-box {
+  display: flex;
+  margin: 0 auto;
   font: inherit;
   padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+  width: 250px;
+  height: 50px;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-bottom: 60px;
 }
+
+.country-info{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: space-around;
+  align-items: flex-start;
+}
+
+.country{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style: none;
+}
+
+li{
+  margin-bottom: 15px;
+}
+
+img {
+  width: 60px;
+  height: 40px;
+  
+}
+
+.country-list{
+  display: table;
+ margin: 0 auto;
+}
+
+.country-name{
+  display: flex;
+  align-items: end;
+  margin-left: 10px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+span{
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.text{
+  font-size: 18px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+}
+
